--- a/SWD392_HairSalonBookingApp_BE/Application/Application.csproj
+++ b/SWD392_HairSalonBookingApp_BE/Application/Application.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="MailKit" Version="4.8.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
+    <PackageReference Include="System.Drawing.Common" Version="8.0.8" />
   </ItemGroup>
 
   <ItemGroup>
