--- a/SWD392_HairSalonBookingApp_BE/WebApi/WebApi.csproj
+++ b/SWD392_HairSalonBookingApp_BE/WebApi/WebApi.csproj
@@ -13,6 +13,7 @@
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="System.Drawing.Common" Version="8.0.8" />
   </ItemGroup>
 
   <ItemGroup>
