--- a/SWD392_HairSalonBookingApp_BE/WebApi/appsettings.json
+++ b/SWD392_HairSalonBookingApp_BE/WebApi/appsettings.json
@@ -14,5 +14,10 @@
     "Host": "smtp.gmail.com",
     "DisplayName": "Maverick",
     "Port": 587
+  },
+  "CloudinarySettings": {
+    "CloudName": "maverick_barber",
+    "ApiKey": "114691351197456",
+    "ApiSecret": "xnFXSle8d4_PY4oahMkuDKdZClM"
   }
 }
