--- a/SWD392_HairSalonBookingApp_BE/WebApi/appsettings.json
+++ b/SWD392_HairSalonBookingApp_BE/WebApi/appsettings.json
@@ -16,7 +16,7 @@
     "Port": 587
   },
   "CloudinarySettings": {
-    "CloudName": "maverick_barber",
+    "CloudName": "dws57sxu6",
     "ApiKey": "114691351197456",
     "ApiSecret": "xnFXSle8d4_PY4oahMkuDKdZClM"
   }
