add payment function

--- a/SWD392_HairSalonBookingApp_BE/WebApi/appsettings.Development.json
+++ b/SWD392_HairSalonBookingApp_BE/WebApi/appsettings.Development.json
@@ -18,5 +18,12 @@
     "CloudName": "dws57sxu6",
     "ApiKey": "114691351197456",
     "ApiSecret": "xnFXSle8d4_PY4oahMkuDKdZClM"
+  },
+  "AllowedHosts": "*",
+  "AllowedMethods": "*",
+  "Environment": {
+    "PAYOS_CLIENT_ID": "a6e1504f-1933-4440-9fe2-b48f5999ca0e",
+    "PAYOS_API_KEY": "1",
+    "PAYOS_CHECKSUM_KEY": "1"
   }
 }
