--- a/SWD392_HairSalonBookingApp_BE/WebApi/appsettings.json
+++ b/SWD392_HairSalonBookingApp_BE/WebApi/appsettings.json
@@ -20,8 +20,9 @@
         "ApiKey": "114691351197456",
         "ApiSecret": "xnFXSle8d4_PY4oahMkuDKdZClM"
     },
-    "Firebase": {
-        "ProjectId": "your-firebase-project-id",
-        "PrivateKey": "your-private-key"
-    }
+    //"Firebase": {
+    //    "ProjectId": "your-firebase-project-id",
+    //    "PrivateKey": "your-private-key"
+    //
+    //}
 }
